fixed som missing colors to history

--- a/src/themes/etf2l.org-dark.scss
+++ b/src/themes/etf2l.org-dark.scss
@@ -144,11 +144,14 @@
     background: #1c1c1c!important;
   }
 
-  .fix tr.comp {
-    cursor: pointer;
+  .fix tr {
+    &.comp,
+    &.thistory {
+      cursor: pointer;
 
-    td {
-      background: #252525 !important;
+      td {
+        background: #252525 !important;
+      }
     }
   }
 
